--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "file-loader": "^1.1.11",
-    "jquery": "^3.3.1",
-    "style-loader": "^0.20.3",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "babel-cli": ">=6.26.0",
+    "babel-core": ">=6.26.0",
+    "babel-loader": ">=7.1.4",
+    "babel-preset-env": ">=1.6.1",
+    "babel-preset-react": ">=6.24.1",
+    "css-loader": ">=0.28.11",
+    "file-loader": ">=1.1.11",
+    "jquery": ">=3.3.1",
+    "style-loader": ">=0.20.3",
+    "url-loader": ">=1.0.1",
+    "webpack": ">=4.5.0",
+    "webpack-cli": ">=2.0.14"
   },
   "dependencies": {}
 }
